[package]
name = "ServiceRs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.5"
rand = "0.8.5"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
opentelemetry = "0.28.0"
opentelemetry_sdk = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
http-body-util = "0.1.3"
hyper = "1.7.0"
